[gd_scene load_steps=6 format=3 uid="uid://feu447it4i6g"]

[ext_resource type="Script" uid="uid://mfm68rj2xeaa" path="res://prefabs/damage_area/damage_area_3d.gd" id="1_wkv1w"]
[ext_resource type="PackedScene" uid="uid://we4b7eu6lq56" path="res://prefabs/text3d/text_3d.tscn" id="2_swkn8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_to7hs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nme3l"]
transparency = 1
albedo_color = Color(0.418, 0.104, 0.132, 0.419)

[sub_resource type="BoxMesh" id="BoxMesh_r4pdi"]
material = SubResource("StandardMaterial3D_nme3l")

[node name="DamageArea3D" type="Area3D" node_paths=PackedStringArray("timer")]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_wkv1w")
timer = NodePath("Timer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_to7hs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_r4pdi")

[node name="Timer" type="Timer" parent="."]

[node name="Text3D" parent="." instance=ExtResource("2_swkn8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.0074, -2.2086, 0)
text = "Damage"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
